fixed hover staying on mobile and blue background after tap

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -6,12 +6,15 @@
 .mat-toolbar {
   background-color: $c-black-80;
 
-  & a:hover {
-    color: $c-yellow;
-    & .misc-links {
+  @media (hover: hover) {
+    & a:hover {
       color: $c-yellow;
+      & .misc-links {
+        color: $c-yellow;
+      }
     }
   }
+
 }
 .spacer {
   flex: 1 1 auto;
